--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body
     class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono']"
   >
-    <div class="container p-6">
+    <div class="container p-6 md:max-w-[730px]">
       <header class="flex items-center justify-between mb-[35px]">
         <a href="#"><img src="./images/logo.svg" alt="logo" /> </a>
         <div class="flex items-center gap-4">
@@ -24,18 +24,49 @@
         </div>
       </header>
       <main>
-        <!-- Search section -->
-        <section class="relative bg-white rounded-[15px] overflow-hidden">
-          <form>
+        <!-- Search section start-->
+        <section class="relative bg-white rounded-[15px] overflow-hidden mb-6">
+          <form class="relative">
             <input
               type="text"
               required
-              class="w-full h-full outline-none shadow-['0px_16px_30px_-10px_rgba(70,96,187,0.20)']"
+              class="w-full h-[60px] outline-none py-[9.5px] pl-12 pr-28 shadow-['0px_16px_30px_-10px_rgba(70,96,187,0.20)']"
               placeholder="Search GitHub username…"
             />
-            <img src="./images/search.svg" alt="search" class="" />
-            <button type="submit">Search</button>
+            <img
+              src="./images/search.svg"
+              alt="search"
+              class="absolute top-0 top-2/4 -translate-y-2/4 left-4"
+            />
+            <button
+              type="submit"
+              class="absolute top-[6px] right-1 py-[12px] px-[19px] bg-[#0079FF] text-white rounded-[10px] transition-all active:scale-90"
+            >
+              Search
+            </button>
           </form>
+        </section>
+        <!-- About section start -->
+        <section class="px-6 py-8 bg-white rounded-[15px]">
+          <div>
+            <div>
+              <div>
+                <img src="./images/git-img.jpg" alt="avatar" />
+              </div>
+              <div>
+                <h1 id="name" class="text-[16px] font-bold text-[#2B3442]">
+                  Dadondev
+                </h1>
+                <a
+                  href="https://github.com/"
+                  target="_blank"
+                  id="userName"
+                  class="font-normal text-[13px] text-[#0079FF]"
+                  >@dadondev</a
+                >
+              </div>
+            </div>
+          </div>
         </section>
       </main>
     </div>
