--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body
-    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono']"
+    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-10"
   >
     <div class="container p-6 md:max-w-[730px]">
       <header class="flex items-center justify-between mb-[35px]">
