--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body
-    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-44"
+    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-44 pb-32"
   >
     <div class="container p-6 md:max-w-[730px]">
       <header class="flex items-center justify-between mb-[35px]">
@@ -30,6 +30,7 @@
             <input
               type="text"
               required
+              id="input"
               class="w-full h-[60px] outline-none py-[9.5px] pl-12 pr-28 shadow-['0px_16px_30px_-10px_rgba(70,96,187,0.20)']"
               placeholder="Search GitHub username…"
             />
@@ -40,6 +41,7 @@
             />
             <button
               type="submit"
+              id="search"
               class="absolute top-[6px] right-1 py-[12px] px-[19px] bg-[#0079FF] text-white rounded-[10px] transition-all active:scale-90"
             >
               Search
@@ -50,8 +52,8 @@
         <section class="px-6 py-8 bg-white rounded-[15px] md:p-10">
           <div class="mb-[33px] md:mb-6">
             <div class="flex gap-[19px] md:items-start md:gap-4">
-              <div class="max-w-[117px] h-auto rounded-[50%]">
-                <img src="./images/git-img.jpg" alt="avatar" class="w-full" />
+              <div class="max-w-[117px] h-auto rounded-[50%] overflow-hidden">
+                <img src="./images/git-img.jpg" alt="avatar" id="avatar" class="w-full" />
               </div>
               <div class="lg:flex lg:items-start lg:justify-between grow">
                 <div>
@@ -80,7 +82,7 @@
             </div>
           </div>
           <div class="lg:flex lg:justify-end lg:-translate-y-16 ">
-            <div class="lg:max-w-[470px]">
+            <div class="lg:max-w-[469px]">
               <p id="bio" class="text-[#4B6A9B] text-[13px] mb-5 md:mb-8">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
                 odio. Quisque volutpat mattis eros.
@@ -149,7 +151,7 @@
                 <div>
                   <div class="flex gap-[14px] items-center">
                     <img src="./images/homes.svg" alt="homes">
-                    <a href="https://github.com" id="home" class="text-[#4B6A9B] text-[13px] hover:underline">@github</a>
+                    <a href="https://github.com/" id="home" class="text-[#4B6A9B] text-[13px] hover:underline">@github</a>
                   </div>
                 </div>
               </div>
