--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body
-    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-44 pb-32"
+    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono']  pb-32"
   >
     <div class="container p-6 md:max-w-[730px]">
       <header class="flex items-center justify-between mb-[35px]">
@@ -59,7 +59,7 @@
                 <div>
                   <h1
                     id="name"
-                    class="text-[16px] font-bold text-[#2B3442] md:text-[26px]"
+                    class="text-[16px] capitalize font-bold text-[#2B3442] md:text-[26px]"
                   >
                     Dadondev
                   </h1>
