--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body
-    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-72 md:pt-0  pb-32"
+    class="h-full flex items-center justify-center bg-[#F6F8FF] font-['Space_Mono'] pt-72 md:pt-40  pb-32"
   >
     <div class="container p-6 md:max-w-[730px]">
       <header class="flex items-center justify-between mb-[35px]">
@@ -151,7 +151,7 @@
                 <div>
                   <div class="flex gap-[14px] items-center">
                     <img src="./images/homes.svg" alt="homes">
-                    <a href="https://github.com/" id="home" class="text-[#4B6A9B] text-[13px] hover:underline">@github</a>
+                    <a href="#" id="home" class="text-[#4B6A9B] text-[13px] hover:underline">@github</a>
                   </div>
                 </div>
               </div>
